Missing check for rpmts.h
git-svn-id: file:///home/hardaker/lib/sf-bkups/net-snmp-convert-svnrepo/branches/V5-4-patches@20523 06827809-a52a-0410-b366-d66718629ded

--- a/configure.in
+++ b/configure.in
@@ -3418,7 +3418,7 @@ AC_CHECK_HEADERS(search.h)
 # RPM subdirectory path (sigh)
 if test "x$with_rpm" != "xno" && \
         echo " $module_list " | grep " host/hr_swinst " > /dev/null; then
-  AC_CHECK_HEADERS(rpm/rpmdb.h)
+  AC_CHECK_HEADERS(rpm/rpmts.h, [], [], [[#include <rpm/rpmlib.h>]])
 fi
 
 # OpenBSD 2.6 needs netinet/in.h before netinet/in_pcb.h
