.gitignore: Ignore *.exe files generated by the Win32 build

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.made
 *.o
 .libs/
+agent/*.exe
 agent/mibgroup/agent_module_dot_conf.h
 agent/mibgroup/agent_module_includes.h
 agent/mibgroup/agent_module_inits.h
@@ -13,6 +14,7 @@ agent/mibgroup/mib_module_includes.h
 agent/mibgroup/mib_module_inits.h
 agent/mibgroup/mib_module_shutdown.h
 agent/snmpd
+apps/*.exe
 apps/agentxtrap
 apps/encode_keychange
 apps/snmpbulkget
@@ -21,6 +23,7 @@ apps/snmpdelta
 apps/snmpdf
 apps/snmpget
 apps/snmpgetnext
+apps/snmpnetstat/*.exe
 apps/snmpnetstat/snmpnetstat
 apps/snmpset
 apps/snmpstatus
