Add autom4te.cache and stamp-h to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ apps/snmptrapd
 apps/snmpusm
 apps/snmpvacm
 apps/snmpwalk
+autom4te.cache/
 confdefs.h
 config.log
 config.status
@@ -69,5 +70,6 @@ sedscript
 snmplib/snmpsm_init.h
 snmplib/snmpsm_shutdown.h
 snmplib/transports/snmp_transport_inits.h
+stamp-h
 testing/failed_tests
 testing/testing/
