Added questions at the top for prompting for TODO lables

--- a/local/mib2c.org-mode.conf
+++ b/local/mib2c.org-mode.conf
@@ -19,6 +19,26 @@
         $o.description
 @enddefine@
 ##
+@open -@
+We're about to generate an Emacs org-mode file for you.  First, though,
+a couple of quick questions:
+
+@prompt $dotodo Do you want us to put TODO labels on the tables (y/n):@
+@if "$dotodo" eq "y"@
+@eval $tabletodo = "TODO "@
+@end@
+
+@prompt $dotodo Do you want us to put TODO labels on the notifications (y/n):@
+@if "$dotodo" eq "y"@
+@eval $notificationtodo = "TODO "@
+@end@
+
+What about objects, such as table columns and notification varbinds?
+@prompt $dotodo Do you want us to put TODO labels on these objects (y/n):@
+@if "$dotodo" eq "y"@
+@eval $objecttodo = "TODO "@
+@end@
+##
 @open ${name}.org@
 MIB Information for $name.module::$name
 
