--- a/local/mib2c.conf
+++ b/local/mib2c.conf
@@ -14,10 +14,12 @@ You requested mib2c to be run on the following part of the MIB tree:
 
 First, do you want to generate code that is compatible with the
 ucd-snmp 4.X line of code, or code for the newer Net-SNMP 5.X code
-base (which provides a much greater choice of APIs to pick from):
+base (which provides a much greater choice of APIs to pick from).  Or
+do you simply want to translate the MIB structures into documentation?
 
   1) ucd-snmp style code
   2) Net-SNMP style code
+  3) Generate documentation
 
 @prompt $ans Select your choice : @
 @if $ans == 1@
@@ -28,6 +30,26 @@ base (which provides a much greater choice of APIs to pick from):
   using the mib2c.old-api.conf configuration file to generate your code.
   @run mib2c.old-api.conf@
 
+@elsif $ans == 3@
+**********************************************************************
+  GENERATING DOCUMENTATION
+**********************************************************************
+
+Which type of documentation would you like to generate:
+
+  1) HTML
+  2) Emacs Org-Mode
+
+    @prompt $ansdocs Select your choice : @
+@if $ansdocs == 1@
+*** Generating $name.html:
+@run mib2c.genhtml.conf@
+@elsif $ansdocs != 2@
+ERROR: invalid selection; terminating.
+@else@
+*** Generating $name.org:
+@run mib2c.org-mode.conf@
+@end@
 @elsif $ans != 2@
 Invalid answer.
 @else@
