fix some variables that needed wrapping in {}s

--- a/local/mib2c.conf
+++ b/local/mib2c.conf
@@ -45,12 +45,12 @@ Which type of documentation would you like to generate:
 
     @prompt $ansdocs Select your choice : @
 @if $ansdocs == 1@
-*** Generating $name.html:
+*** Generating ${name}.html:
 @run mib2c.genhtml.conf@
 @elsif $ansdocs != 2@
 ERROR: invalid selection; terminating.
 @else@
-*** Generating $name.org:
+*** Generating ${name}.org:
 @run mib2c.org-mode.conf@
 @end@
 @elsif $ans == 3@
