added descriptions for tables and notifications

--- a/local/mib2c.org-mode.conf
+++ b/local/mib2c.org-mode.conf
@@ -52,6 +52,8 @@ This file was created with /mib2c -c mib2c.org-mode.conf $name/
 * Tables
 @foreach $t table@
 *** ${tabletodo}$t ($t.objectID)
+***** Description
+      $t.description
 ***** Indexes:
 @foreach $o index@
 @calldefine object@
@@ -63,6 +65,8 @@ This file was created with /mib2c -c mib2c.org-mode.conf $name/
 @end@
 * Notifications
 @foreach $n notifications@
+*** Description
+    $n.description
 *** ${notificationtodo}$n ($n.objectID)
 @foreach $o varbinds@
 @calldefine object@
