--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ perl/NetSNMP.c
 perl/OID/OID.c
 perl/SNMP/SNMP.c
 perl/SNMP/t/snmptest.cmd
+perl/TrapReceiver/const-c.inc
+perl/TrapReceiver/const-xs.inc
 perl/TrapReceiver/TrapReceiver.c
 pm_to_blib
 sedscript
