Windows: Make the Net-SNMP source tree build again after the systemd changes.

--- a/win32/libsnmp/Makefile.in
+++ b/win32/libsnmp/Makefile.in
@@ -42,6 +42,7 @@ LIB32_OBJS= \
 	"$(INTDIR)\read_config.obj" \
 	"$(INTDIR)\readdir.obj" \
 	"$(INTDIR)\scapi.obj" \
+	"$(INTDIR)\sd-daemon.obj" \
 	"$(INTDIR)\snmp-tc.obj" \
 	"$(INTDIR)\snmp.obj" \
 	"$(INTDIR)\snmpCallbackDomain.obj" \
@@ -303,6 +304,12 @@ SOURCE=..\..\snmplib\readdir.c
 SOURCE=..\..\snmplib\scapi.c
 
 "$(INTDIR)\scapi.obj" : $(SOURCE) "$(INTDIR)"
+	$(CPP) $(CPP_PROJ) $(SOURCE)
+
+
+SOURCE=..\..\snmplib\sd-daemon.c
+
+"$(INTDIR)\sd-daemon.obj" : $(SOURCE) "$(INTDIR)"
 	$(CPP) $(CPP_PROJ) $(SOURCE)
 
 
