Use the feature target instead of the target when building the feature set

--- a/apps/Makefile.in
+++ b/apps/Makefile.in
@@ -135,7 +135,7 @@ FTOBJS=$(LIBTRAPD_FTS) \
        snmpgetnext.ft \
        $(EKCFEATUREPROG) \
        snmpdf.ft \
-       $(SSHINSTALLBINPROG)
+       $(SSHFEATUREPROG)
 
 all: standardall
 
