CHANGES: misc: Quote the argument given to the --cflags and --ldflags subflags of --compile-subagent
The point here is to preserve embedded spaces so as to allow e.g.
net-snmp-config --compile-subagent --cflags="-DX -I." as this would have lost
the -I. part earlier.

--- a/net-snmp-config.in
+++ b/net-snmp-config.in
@@ -250,7 +250,7 @@ else
 	            echo "You must specify the extra cflags"
 	            exit 1
 	        fi
-	        cflags=$1
+	        cflags="$1"
 	        echo "setting extra cflags: $cflags"
 	        shift
 		;;
@@ -260,7 +260,7 @@ else
 	            echo "You must specify the extra ldflags"
 	            exit 1
 	        fi
-	        ldflags=$1
+	        ldflags="$1"
 	        echo "setting extra ldflags: $ldflags"
 	        shift
 		;;
