--- a/local/mib2c.table_data.conf
+++ b/local/mib2c.table_data.conf
@@ -211,6 +211,7 @@ int
 ${i}_load( netsnmp_cache *cache, void *vmagic ) {
     netsnmp_tdata     *table = (netsnmp_tdata *)vmagic;
     netsnmp_tdata_row *row;
+    struct ${i}_entry *this;
     FILE *fp;
     char buf[STRMAX];
   @foreach $idx index@
@@ -222,13 +223,23 @@ ${i}_load( netsnmp_cache *cache, void *vmagic ) {
     @end@
   @end@
 
+    /* The basic load routine template assumes that the data to
+       be reported is held in a file - with one row of the file
+       for each row of the table.
+          If your data is available via a different API, you
+       should amend this initial block (and the control of the
+       'while' loop) accordingly.
+          'XXX' marks places where the template is incomplete and
+       code will definitely need to be added. */
+
     fp = fopen( "/data/for/${i}", "r" );
     if ( !fp ) {
         return -1;
     }
     while ( fgets( buf, STRMAX, fp )) {
-        /* Unpick 'buf' to extract the index values... */
-        this = ${i}_createEntry(table
+        /* XXX - Unpick 'buf' to extract the individual field values
+                 (or at least the index values for this row) ... */
+        row = ${i}_createEntry(table
   @foreach $idx index@
     @if $idx.needlength@
                          , $idx
@@ -238,7 +249,11 @@ ${i}_load( netsnmp_cache *cache, void *vmagic ) {
     @end@
   @end@
                         );
-        /* ... and then populate 'this' with the column values */
+        if (row == NULL)
+            continue;
+        this = (struct ${i}_entry *)row->entry;
+        /* XXX - ... and then populate the 'this' data structure with
+                 column values (typically) extracted from 'buf' above */
     }
     fclose(fp);
     return 0;  /* OK */
