CHANGES: building: When you say make libs you expect all the libs to be built.
This is demonstrated by the snmptrapd target at the top level which obviously
expected both libs to be built and so failed to compile before this patch.

--- a/agent/Makefile.in
+++ b/agent/Makefile.in
@@ -154,7 +154,7 @@ agentlib: $(AGENTLIB)
 
 miblib: $(MIBLIB)
 
-libs: $(INSTALLLIBS)
+libs: $(AGENTLIB) $(MIBLIB)
 
 embedperlinstall:
 	  @$(SHELL) $(srcdir)/../mkinstalldirs $(INSTALL_PREFIX)$(snmplibdir)
