CHANGES: BUG: 3452069: Fix snmptrap_oid declaration in mib2c generated code
This bug was introduced considerable time ago. It did already exist at the
time the 5.6 branch was created (see also commit
0ec088afa27cfda4e6ea78aae7cfc5507564edde).

--- a/local/mib2c.notify.conf
+++ b/local/mib2c.notify.conf
@@ -30,7 +30,7 @@ int send_${i}_trap(void);
 #include <net-snmp/agent/net-snmp-agent-includes.h>
 #include "${name}.h"
 
-extern const oid snmptrap_oid;
+extern const oid snmptrap_oid[];
 extern const size_t snmptrap_oid_len;
 
 @foreach $i notifications@
