CHANGES: mib2c: PATCHES 3410050: Skip already-'processed' varbinds Patch provided by Stephen Turner

--- a/local/mib2c.table_data.conf
+++ b/local/mib2c.table_data.conf
@@ -291,6 +291,9 @@ ${i}_handler(
          */
     case MODE_GET:
         for (request=requests; request; request=request->next) {
+            if (request->processed)
+                continue;
+
             table_entry = (struct ${i}_entry *)
                               netsnmp_tdata_extract_entry(request);
             table_info  =     netsnmp_extract_table_info( request);
@@ -329,6 +332,9 @@ ${i}_handler(
          */
     case MODE_SET_RESERVE1:
         for (request=requests; request; request=request->next) {
+            if (request->processed)
+                continue;
+
             table_entry = (struct ${i}_entry *)
                               netsnmp_tdata_extract_entry(request);
             table_info  =     netsnmp_extract_table_info( request);
@@ -368,6 +374,9 @@ ${i}_handler(
     case MODE_SET_RESERVE2:
 @if $i.creatable@
         for (request=requests; request; request=request->next) {
+            if (request->processed)
+                continue;
+
             table_row  = netsnmp_tdata_extract_row(  request);
             table_data = netsnmp_tdata_extract_table(request);
             table_info = netsnmp_extract_table_info( request);
@@ -435,6 +444,9 @@ ${i}_handler(
     case MODE_SET_FREE:
 @if $i.creatable@
         for (request=requests; request; request=request->next) {
+            if (request->processed)
+                continue;
+
             table_entry = (struct ${i}_entry *)
                               netsnmp_tdata_extract_entry(request);
             table_row   =     netsnmp_tdata_extract_row(  request);
@@ -473,6 +485,9 @@ ${i}_handler(
 
     case MODE_SET_ACTION:
         for (request=requests; request; request=request->next) {
+            if (request->processed)
+                continue;
+
             table_entry = (struct ${i}_entry *)
                               netsnmp_tdata_extract_entry(request);
             table_info  =     netsnmp_extract_table_info( request);
@@ -534,6 +549,9 @@ ${i}_handler(
 
     case MODE_SET_UNDO:
         for (request=requests; request; request=request->next) {
+            if (request->processed)
+                continue;
+
             table_entry = (struct ${i}_entry *)
                               netsnmp_tdata_extract_entry(request);
             table_row   =     netsnmp_tdata_extract_row(  request);
@@ -610,6 +628,9 @@ ${i}_handler(
     case MODE_SET_COMMIT:
 @if $i.creatable@
         for (request=requests; request; request=request->next) {
+            if (request->processed)
+                continue;
+
             table_entry = (struct ${i}_entry *)
                               netsnmp_tdata_extract_entry(request);
 @if $i.rowstatus@
