--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ perl/TrapReceiver/const-c.inc
 perl/TrapReceiver/const-xs.inc
 perl/TrapReceiver/TrapReceiver.c
 pm_to_blib
+python/build
 sedscript
 snmplib/snmpsm_init.h
 snmplib/snmpsm_shutdown.h
